Fix syntax error